<resources>
    <string name="app_name">GottaEatEmAll</string>
    <string name="page_home">Home</string>
    <string name="page_search">Search</string>
    <string name="page_team">Team</string>
    <string name="page_meal">Meal</string>
    <string name="page_card">Card</string>
    <string name="page_detail">Detail</string>
    <string name="page_team_form">Team Form</string>
    <string name="page_team_form_edit">Team Edit Form</string>
    <string name="page_form">Form</string>

    <string name="create_meal">Create a Meal</string>
    <string name="favorite_meal">Favorite Meal</string>
    <string name="choose_pokemon_meal">Choose two Pokemon for your meal</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_complete">Confirm &amp; Complete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_selection">Are you sure you want to select this Pokemon?</string>
    <string name="back">Back</string>
    <string name="first_ingredient">First Ingredient</string>
    <string name="second_ingredient">Second Ingredient</string>
    <string name="ingredient_list">Ingredients</string>
    <string name="meal_summary">Meal Summary</string>
    <string name="delete_dialog_text">Are you sure you want to delete this team? This action cannot be undone!</string>
    <string name="delete_dialog_title">Delete Team</string>
    <string name="edit_team">Edit Team</string>
    <string name="create_new_team">Create New Team</string>
    <string name="team">Team</string>
    <string name="new_team">New Team</string>
    <string name="team_name">Team Name</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="your_teams">Your Teams</string>
    <string name="menu_toggle">Menu Toggle</string>
    <string name="delete_team">Delete Team</string>
    <string name="no_matches_found">No matches found</string>

    <string name="trainer_name">Trainer Name</string>
    <string name="play_time">Total Play Time</string>
    <string name="num_caught">Number of Pokemon Caught</string>
    <string name="fav_battle">Favorite Pokemon</string>
    <string name="fav_eat">Favorite Pokemon to Eat</string>
    <string name="badge_boulder">Boulder</string>
    <string name="badge_cascade">Cascade</string>
    <string name="badge_thunder">Thunder</string>
    <string name="badge_rainbow">Rainbow</string>
    <string name="badge_marsh">Marsh</string>
    <string name="badge_soul">Soul</string>
    <string name="badge_volcano">Volcano</string>
    <string name="badge_earth">Earth</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="make_card">Make a new Trainer card</string>
</resources>
